# minkipc

./: .clang-format  CMakeLists.txt  CODING-STYLE.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md
.github/workflows/: quic-organization-repolinter.yml
docs/: mink-object.md  minkipc.md
libminkadaptor/: CMakeLists.txt  README.md  minkadaptor.pc.in
libminkadaptor/cmake/: FindQCOMTEE.cmake
libminkadaptor/include/: MinkCom.h  object.h
libminkadaptor/src/: mink_adaptor.c  mink_adaptor_priv.h  supplicant.c  supplicant.h  syscall.S
libminkadaptor/src/linux/: tee.h
libminkadaptor/tests/smcinvoke_client/: CMakeLists.txt
libminkadaptor/tests/smcinvoke_client/idl/: CDiagnostics.h  CDiagnostics.idl  IAppLegacyTest.idl  IDiagnostics.idl  IOpener.idl  ITestCBack.h  ITestCBack.idl  ITestCBack_invoke.h  ITestMemManager.h  ITestMemManager.idl
libminkadaptor/tests/smcinvoke_client/include/: heap_port.h  tzecotestapp_uids.h  tzt.h
libminkadaptor/tests/smcinvoke_client/src/: CTestCallable.cpp  CTestCallable_open.h  CTestCallable_priv.h  smcinvoke_client.cpp  smcinvoke_client.h
libminkteec/: CMakeLists.txt  README.md  minkteec.pc.in
libminkteec/idl/: CGPAppClient.h  CGPAppClient.idl  CWait_open.h  ICredentials.idl  IGPAppClient.h  IGPAppClient.idl  IGPSession.h  IGPSession.idl  IWait.h  IWait.idl  IWait_invoke.h
libminkteec/include/: tee_client_api.h
libminkteec/src/: CWait.c  memscpy.h  mink_teec.c  mink_teec.h  qlist.h  tee_client_api.c
libminkteec/tests/gp_test_client/: CMakeLists.txt
libminkteec/tests/gp_test_client/idl/: CAppLoader.idl  IAppController.idl  IAppLoader.h  IAppLoader.idl  IClientEnv.h  IClientEnv.idl  IIO.idl
libminkteec/tests/gp_test_client/src/: gp_load_ta.c  gp_load_ta.h  gp_test_client.c
listeners/libdrmfs/: CMakeLists.txt  cmn.h  fs_main.c  fs_msg.h  gpfs_main.c  helper.h
listeners/libdrmtime/: CMakeLists.txt  atime.c
listeners/libfsservice/: CMakeLists.txt  fs.h  gpfs.h  helper.c
listeners/libfsservice/fs/: CMakeLists.txt  fs.c
listeners/libfsservice/gpfs/: CMakeLists.txt  gpfs.c  gpfs_main.c  gpfs_msg.h
listeners/libtaautoload/: CMakeLists.txt
listeners/libtaautoload/idl/: CRegisterTABufCBO.h  CRegisterTABufCBO.idl  IRegisterTABufCBO.h  IRegisterTABufCBO.idl  IRequestTABuffer.h  IRequestTABuffer.idl  IRequestTABuffer_invoke.h
listeners/libtaautoload/src/: CRequestTABuffer.cpp  CRequestTABuffer.h  TaAutoLoad.cpp  TaAutoLoad.h  dmaMemPool.cpp  dmaMemPool.h  taImageReader.cpp  taImageReader.h  utils.h
listeners/libtimeservice/: CMakeLists.txt  atime.c  time_msg.h
qtee_supplicant/: CMakeLists.txt
qtee_supplicant/idl/: CRegisterListenerCBO.h  CRegisterListenerCBO.idl  IClientEnv.h  IListenerCBO.h  IListenerCBO.idl  IListenerCBO_invoke.h  IMemRegion.idl  IRegisterListenerCBO.h  IRegisterListenerCBO.idl
qtee_supplicant/include/: CListenerCBO.h  listener_mngr.h  qtee_supplicant.h
qtee_supplicant/src/: CListenerCBO.c  listener_mngr.c  qtee_supplicant.c
tests/: CMakeLists.txt  README.md
tests/idl/: CIO.h  IDiagnostics.h  IIO.h  IIO_invoke.h  IOpener.h  ITestCBack.h  ITestCBack_invoke.h
tests/include/: cdefs.h  heap.h
tests/smcinvoke_client/cmake/: FindQCBOR.cmake
tests/smcinvoke_client/idl/: CAppLoader.h  CTestCallable_open.h  IAppController.h
tests/smcinvoke_client/include/: memscpy.h
tests/src/: CIO.c  CTestCallable.cpp  CTestCallable_priv.h  smcinvoke_client.cpp  smcinvoke_client.h
